[package]
name = "sak-paxos"
version = "0.1.0"
authors = ["Galudisu <galudisu@gmail.com>"]
edition = "2018"
repository = "https://github.com/barudisshu/sak-paxos"
license = "MIT"

exclude = ["/.github/*", "./circleci/*", "/.travis.yml"]

[badges]
circle-ci = { repository = "mshrtsr/fitting-rs", branch = "master" }
travis-ci = { repository = "mshrtsr/fitting-rs", branch = "master" }

codecov = { repository = "mshrtsr/fitting-rs", branch = "master", service = "github" }


[dependencies]
log = "0.4"